# speedy-native

./: .gitignore  .npmrc  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: Bench.yaml  CI.yaml  Lint.yaml  Test.yaml
benchmark/: bench.ts  package.json  transform-import.ts  tsconfig.json
core/speedy-sass/: Cargo.toml  build.rs
core/speedy-sass/source/: .gitkeep
core/speedy-sass/src/: lib.rs  options.rs  sass_clib.rs  test.rs
core/speedy-sass/src/bindings/: context.rs  mod.rs  options.rs  ptr.rs  util.rs
core/speedy-transform/: Cargo.toml
core/speedy-transform/src/: lib.rs  str.rs  test.rs  types.rs
core/speedy-transform/src/sass_transform/: transform.rs
core/speedy-transform/src/web_transform/: babel_import.rs  commonjs.rs  mod.rs  react.rs  scanner.rs
crates/speedy-macro/: Cargo.toml
crates/speedy-macro/src/: lib.rs
crates/speedy-transform/: Cargo.toml
crates/speedy-transform/src/: lib.rs  napi_types.rs  str.rs  test.rs  types.rs  wasm_types.rs
crates/speedy-transform/src/web_transform/: babel_import.rs  clear_mark.rs  mod.rs  parser.rs  proxy.rs  react.rs  remove_call.rs  remove_effect.rs  visit.rs
dev/bench/: data.js
node/: .gitignore  Cargo.toml  binding.js  index.d.ts  package.json  tsconfig.json
node/.rush/temp/: package-deps_test.json
node/__tests__/: unit.spec.ts
node/__tests__/__snapshots__/: unit.spec.ts.snap
node/lib/: index.d.ts  index.js
node/npm/android-arm-eabi/: README.md  package.json
node/npm/android-arm64/: README.md  package.json
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/freebsd-x64/: README.md  package.json
node/npm/linux-arm-gnueabihf/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md  package.json
node/npm/win32-ia32-msvc/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs  test.rs  types.rs
speedy-swc/src/: index.ts  types.ts
speedy-swc/src/plugins/: babel-plugin-import.ts  index.ts  system-js.ts
wasm/: .npmignore  Cargo.toml  package.json
wasm/__tests__/: unit.spec.ts
wasm/__tests__/__snapshots__/: unit.spec.ts.snap
wasm/src/: lib.rs  test.rs
