[package]
name = "speedy-napi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.71"
serde = "1.0.132"
napi = { version = "2.0.0", features = ["napi3"] }
napi-derive = "2.0.0"
speedy-transform = { path = "../crates/speedy-transform" }
speedy-macro = { path = "../crates/speedy-macro" }

[build-dependencies]
napi-build = "1"
