[package]
name = "speedy-wasm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
speedy-transform = { path = "../core/speedy-transform" }

[build-dependencies]
bindgen = "0.59.1"

[dev-dependencies]
bindgen = "0.59.1"
wasm-bindgen = "0.2"