[package]
name = "speedy-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.71"
speedy-macro = { path = "../speedy-macro" }
serde = "1.0.132"
swc = "0.86.0"
swc_ecma_parser = "0.78.7"
swc_common = "0.14.6"
swc_ecma_visit = "0.44.0"
swc_ecma_ast = "0.58.0"
swc_ecma_transforms = "0.95.0"
swc_ecma_transforms_base = "0.44.2"
swc_ecma_transforms_react = "0.60.0"
swc_ecma_transforms_typescript = "0.61.1"
swc_ecma_transforms_compat = "0.52.12"
swc_atoms = "0.2.9"
anyhow = "1"
