[package]
name = "speedy-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.71"
speedy-macro = { path = "../speedy-macro" }
serde = "1.0.132"
swc = "0.168.0"
swc_ecma_parser = "0.102.1"
swc_common = "0.17.21"
swc_ecma_visit = "0.62.0"
swc_ecma_ast = "0.76.0"
swc_ecma_transforms = "0.145.0"
swc_ecma_transforms_base = "0.78.0"
swc_ecma_transforms_react = "0.107.0"
swc_ecma_transforms_typescript = "0.110.0"
swc_ecma_transforms_compat = "0.92.0"
swc_ecma_codegen = "0.105.2"
swc_atoms = "0.2.11"
anyhow = "1.0.56"
regex = "1.5.5"

