[package]
name = "speedy-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.71"
speedy-macro = { path = "../speedy-macro" }
napi = { version = "2.0.0", features = ["napi3"] }
napi-derive = "2.0.0"
serde = "1.0.132"
swc = "=0.212.0"
swc_ecma_parser = "=0.116.0"
swc_common = "=0.26.0"
swc_ecma_visit = "=0.75.0"
swc_ecma_ast = "=0.89.0"
swc_ecma_transforms = "=0.181.0"
swc_ecma_transforms_base = "=0.102.0"
swc_ecma_transforms_react = "=0.130.0"
swc_ecma_transforms_typescript = "=0.134.0"
swc_ecma_transforms_compat = "=0.112.0"
swc_ecma_codegen = "=0.113.0"
swc_atoms = "=0.3.1"
anyhow = "=1.0.56"
regex = "=1.5.5"
heck = "=0.4.0"

